--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body.light-mode {
 /* Dark Mode Styles */
   body.dark-mode {
     background-color: #121212;
-    color: #ffffff;
+    color: #520f0f;
 }
   
 /* Center the switch */
